--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     text-decoration: none;
 }
 a:link{color: #000000;}
-a:hover{color: #22FF99;}
+a:hover{color: #BE3DE5;}
 a:active{color: #000000;}
 a:visited{color: #000000;}
 
